--- a/package.json
+++ b/package.json
@@ -5,26 +5,32 @@
   "scripts": {
     "prestart": "npm install",
     "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "pretest": "npm install",
     "test": "./node_modules/.bin/mocha test"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
-    "chai": "^4.1.1",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^3.0.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "jade": "~1.11.0",
+    "cookie-parser": "^1.4.4",
+    "debug": "^2.6.9",
+    "express": "^4.17.1",
+    "jade": "^1.11.0",
     "jsonfile": "^3.0.1",
-    "lodash": "^4.17.4",
-    "mocha": "^3.5.0",
-    "mocha-junit-reporter": "^1.13.0",
-    "mocha-multi-reporters": "^1.1.4",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "sqlite3": "^3.1.9",
-    "bluebird": "^3.5.0"
+    "lodash": "^4.17.15",
+    "mocha": "^3.5.3",
+    "mocha-junit-reporter": "^1.23.1",
+    "mocha-multi-reporters": "^1.1.7",
+    "morgan": "^1.8.2",
+    "mysql2": "^2.0.2",
+    "sequelize": "^5.21.3",
+    "serve-favicon": "^2.4.5",
+    "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
